# ckan-docker

./: .ahoy.yml  .editorconfig  .env  .env-example  .env.dbca  .env.example  .env.template  .env.use-generated-passwords  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Carlos_Alberto_Video_atividade_2.txt  Dockerfile  Dockerfile.dev  OLD.README.txt  README  README.md  README.txt  README_DBCA.md  TODO's.txt  TODO.livelog.txt  Vagrantfile  build.cmd  ckan.ini  docker-compose-use-generated-passwords.yml  docker-compose.dev.secure.yml  docker-compose.dev.yml  docker-compose.insecure.yml  docker-compose.secure.yml  docker-compose.yml  docker.tar  environ  fig-test.yml  fig.yml  generate_passwords.py  generate_passwords.sh  not-compose.sh  (+7 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_template.yml  feature_template.yml  story_template.yml
.github/workflows/: build.yml  dbca_build.yml  docker.yml  main.yml  release-package.yml  release.yml  test.yml  trivy_db_cache.yml  weekly_vuln_scan.yml
_etc/: README.md
_etc/apache2/: apache.conf
_etc/ckan/: custom_options.ini
_etc/cron.d/: ckan
_etc/my_init.d/: 55_configure
_etc/nginx/: nginx.conf
_http/: ckan.http  facets.http  mock_catalogue.http
_service-provider/: README.md
_service-provider/_datapusher/: Dockerfile
_solr/: README.md
_src/: README.md  run_tests.sh
auxilliary stuff (delete before going live)/: TODO.LIVE.txt
ckan/: Dockerfile  Dockerfile.dev  Dockerfile.spatial-vanilla  Dockerfile.worker  ckan_dataset_schema.yaml
ckan-base/2.7/: Dockerfile
ckan-base/2.8/: Dockerfile
ckan-base/2.9/: Dockerfile
ckan-dev/: README
ckan/src/ckanext-igsn-theme/: MANIFEST.in  README.md  setup.cfg  test.ini
ckan/src/ckanext-igsn-theme/.github/workflows/: test.yml
ckan/src/ckanext-igsn-theme/ckanext/igsn_theme/: cli.py  helpers.py  plugin.py  views.py
ckan/src/ckanext-igsn-theme/ckanext/igsn_theme/assets/: script.js  webassets.yml
ckan/src/ckanext-igsn-theme/ckanext/igsn_theme/assets/css/: igsn_theme.css
ckan/src/ckanext-igsn-theme/ckanext/igsn_theme/logic/: action.py  validators.py
ckan/src/ckanext-igsn-theme/ckanext/igsn_theme/templates/: base.html  header.html
ckan/src/ckanext-igsn-theme/ckanext/igsn_theme/tests/: test_helpers.py  test_plugin.py  test_views.py
ckan/src/ckanext-igsn-theme/ckanext/igsn_theme/tests/logic/: test_action.py  test_auth.py  test_validators.py
datapusher/: Dockerfile  datapusher-settings.py  example.env
demo/: add_data.py
doc/: Makefile  conf.py  contributing.rst  developer-guide.rst  introduction.rst  make.bat  ops-guide.rst  user-guide.rst
docker-entrypoint-initdb.d/: 10_create_datastore.sql  20_setup_test_databases.sql
images/: README
keycloak/: Dockerfile
local/: ckan.ini
national-node-catalogue-mock/: Dockerfile  catalogue.ttl  main.py  requirements.txt  xnat.ttl
nginx/: Dockerfile
old stuff to delete/: dev-requirements.txt
patches/: 00_patch_sql_url.patch  01_patch_resource_replace_upload.patch  02_patch_postgres_username_split.patch
postgresql/: Dockerfile
samples/: .env.example  ckan.ini.example
scripts/: apply_ckan_patches.sh
setup/: datapusher-uwsgi.ini  datapusher_settings.py  start_datapusher.sh  supervisor.uwsgi.conf  supervisord.conf
solr/: Dockerfile
src/: README  dbca_install_extensions.sh
src/ckanext-aorc/: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
src/ckanext-aorc-transposition/: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
src/ckanext-aorc-transposition/.github/workflows/: test.yml
src/ckanext-aorc-transposition/ckanext/aorc_transposition/: cli.py  helpers.py  plugin.py  views.py
src/ckanext-aorc-transposition/ckanext/aorc_transposition/assets/: script.js  webassets.yml
src/ckanext-aorc-transposition/ckanext/aorc_transposition/logic/: action.py  auth.py  schema.py  validators.py
src/ckanext-aorc-transposition/ckanext/aorc_transposition/templates/package/: transposition_read.html
src/ckanext-aorc-transposition/ckanext/aorc_transposition/templates/package/snippets/: transposition_additional_info.html  transposition_package_basic_fields.html  transposition_package_form.html
src/ckanext-aorc-transposition/ckanext/aorc_transposition/tests/: test_helpers.py  test_plugin.py  test_views.py
src/ckanext-aorc-transposition/ckanext/aorc_transposition/tests/logic/: test_action.py  test_auth.py  test_validators.py
src/ckanext-aorc/.github/workflows/: test.yml
src/ckanext-aorc/ckanext/aorc/: plugin.py
src/ckanext-aorc/ckanext/aorc/assets/: script.js  webassets.yml
src/ckanext-aorc/ckanext/aorc/templates/package/: composite_edit.html  composite_read.html  mirror_read.html  transposition_edit.html
src/ckanext-aorc/ckanext/aorc/templates/package/snippets/: composite_additional_info.html  composite_package_basic_fields.html  composite_package_form.html  composite_resource_form.html  mirror_additional_info.html  mirror_package_basic_fields.html  mirror_package_form.html  transposition_package_basic_fields.html
src/ckanext-aorc/ckanext/aorc/tests/: test_plugin.py
src/ckanext-nadit/: MANIFEST.in  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  test.ini
src/ckanext-nadit/.github/workflows/: test.yml
src/ckanext-nadit/ckanext/nadit/: plugin.py
src/ckanext-nadit/ckanext/nadit/harvesters/: ckan_nadit_harvester.py  util.py
src/ckanext-nadit/test-sync/: .gitignore  README.md  ckan_sync.py
src/ckanext-newextension/: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
src/ckanext-newextension/.github/workflows/: test.yml
src/ckanext-newextension/ckanext/newextension/: plugin.py
src/ckanext-newextension/ckanext/newextension/assets/: script.js  webassets.yml
src/ckanext-newextension/ckanext/newextension/templates/package/snippets/: additional_info.html  package_basic_fields.html  package_metadata_fields.html
src/ckanext-newextension/ckanext/newextension/tests/: test_plugin.py
xloader/: Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml
(+219 files in other folders)
