[metadata]
name = ckanext-aorc
version = 0.0.1
description = Extension to handle AORC ontology datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dewberry/ckanext-aorc
author = Nick Roberts
author_email = njroberts@dewberry.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN AORC RDF rdflib ontology

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             aorc = ckanext.aorc.plugin:AorcPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/aorc/i18n/ckanext-aorc.pot
width = 80

[init_catalog]
domain = ckanext-aorc
input_file = ckanext/aorc/i18n/ckanext-aorc.pot
output_dir = ckanext/aorc/i18n

[update_catalog]
domain = ckanext-aorc
input_file = ckanext/aorc/i18n/ckanext-aorc.pot
output_dir = ckanext/aorc/i18n
previous = true

[compile_catalog]
domain = ckanext-aorc
directory = ckanext/aorc/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
