[metadata]
name = ckanext-igsn-theme
version = 0.0.1
description = CKAN Theme for IGSN data repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IGSN/ckanext-igsn-theme
author = Neda Taherifar
author_email = neda.taherifar@csiro.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN IGSN theme

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             igsn_theme = ckanext.igsn_theme.plugin:IgsnThemePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/igsn_theme/i18n/ckanext-igsn_theme.pot
width = 80

[init_catalog]
domain = ckanext-igsn_theme
input_file = ckanext/igsn_theme/i18n/ckanext-igsn_theme.pot
output_dir = ckanext/igsn_theme/i18n

[update_catalog]
domain = ckanext-igsn_theme
input_file = ckanext/igsn_theme/i18n/ckanext-igsn_theme.pot
output_dir = ckanext/igsn_theme/i18n
previous = true

[compile_catalog]
domain = ckanext-igsn_theme
directory = ckanext/igsn_theme/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
